--- a/APIgit/views/index.hbs
+++ b/APIgit/views/index.hbs
@@ -30,7 +30,7 @@
 
 
     <section class="col-xs-12 .col-sm-6 .col-lg-8">
-        <center><h3>GET RULES </h3></center>
+        <center><h3><b>GET RULES </b></h3></center>
             <form action="/get" method="post">
                 <div class="pull-right">
                     <div class="btn-group">
